--- a/landingPage/templates/landingPage.html
+++ b/landingPage/templates/landingPage.html
@@ -1,31 +1,47 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
+		<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+		<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+		<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 	
 	</head>
-	<body>
-		<h1>Halo, apa kabar?</h1>
-		<br>
-		<h1>write status : </h1>
-		<form action="{% url 'landingPage:landingPage' %}"method="POST">
-			{% csrf_token %}
-			{{ form.status }}
-			<div style="display:none"> {{ form.post_time }} </div>
-			<input type="submit" value="Post" id="submit">
-		</form>
+	<body style="background-color:#FAFAFA">
+		<h1 style="margin-top:3%;margin-left:5%;margin-bottom:1%;">Halo, apa kabar?</h1>
 		
-		<h1>status written : </h1>
-		<table style="border:1px solid black">
-			{% for s in schedule %}
-				<tr>
-					<td style="border:1px solid black">
-						{{ s.status }}
-					</td>
-					<td style="border:1px solid black">
-						{{ s.post_time }}
-					</td>
-				</tr>
-			{% endfor %}
-		</table>
+		<div style="margin-top:2%;margin-right:10%;margin-left:10%;margin-bottom:5%;">
+			<form action="{% url 'landingPage:landingPage' %}"method="POST">
+				{% csrf_token %}
+				<div class="form-group" style="display:none"> {{ form.post_time }} </div>
+				<div class="d-flex flex-row bd-highlight mb-3">
+					<div class="form-group p-2 w-100 bd-highlight">{{ form.status }}</div>
+					<div class="p-2 flex-shrink-1 bd-highlight"><input class="btn btn-info" style="float:right;margin-bottom:5%;" type="submit" value="Post" id="submit"></div>
+				</div>
+			</form>
+			
+			<div class="table-responsive" style="margin-top:5%">
+				<table class="table">
+					<thead>
+						<tr>
+							<th scope="col">Waktu</th>
+							<th scope="col">Kabar</th>
+						</tr>
+					</thead>
+					<tbody>
+						{% for s in schedule %}
+							<tr>
+								<td scope="row">{{ s.post_time }}</td>
+								<td class="text-wrap" style="width:60%">{{ s.status }}</td>
+							</tr>
+						{% endfor %}
+					</tbody>
+				</table>
+			</div>
+		</div>
 	</body>
 </html>
